# AI-Powered-Document-and-Knowledge-Base-Chat

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/v1/: admin.py  auth.py  billing.py  chat.py  documents.py  router.py  widget.py  workspaces.py
backend/app/ingestion/: chunker.py  pipeline.py
backend/app/ingestion/parsers/: csv.py  docx.py  pdf.py  txt.py  url_scraper.py
backend/app/models/: __init__.py  api_key.py  billing.py  chat.py  document.py  user.py  workspace.py
backend/app/rag/: chain.py  embeddings.py  prompts.py  retriever.py  streaming.py  vectorstore.py
backend/app/schemas/: auth.py  billing.py  chat.py  common.py  document.py  workspace.py
backend/app/services/: auth_service.py  billing_service.py  chat_service.py  document_service.py  usage_service.py  workspace_service.py
backend/app/utils/: exceptions.py  security.py  storage.py
backend/app/workers/: celery_app.py  document_tasks.py  maintenance_tasks.py
docs/: api.md  architecture.md  deployment.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  (+1 more)
gateway/: .env.example  Dockerfile  package.json  tsconfig.json
scripts/: create_superuser.py  reset_db.sh  seed.py
widget/: package.json  vite.config.ts
(+89 files in other folders)
